k8s/deployment-busybox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: surya
  name: secret-env-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-env-test
  template:
    metadata:
      labels:
        app: secret-env-test
    spec:
      containers:
      - name: busybox
        image: busybox
        command:
        - sh
        - "-c"
        - "while true; do echo $API_KEY; sleep 10; done"
