k8s/deployment-print-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: surya
  name: secret-env-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-env-test
  template:
    metadata:
      labels:
        app: secret-env-test
        env-secret-secured: "true"
    spec:
      containers:
      - name: busybox
        image:  kadeksuryam/busybox
        command:
        - /vol/init.sh
        args:
        - "--test"
        - "args"
        volumeMounts:
        - name: init-vol
          mountPath: /vol
      volumes:
      - name: init-vol
        emptyDir: {}
